log
lu., 24 de mar. de 2025 10:14:33: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
25021aa
lu., 24 de mar. de 2025 10:16:09: 
 list.c | 30 +++++++++++++++++++++---------
 1 file changed, 21 insertions(+), 9 deletions(-)
 tests:  0|0
29b17e7
lu., 24 de mar. de 2025 10:21:09: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
34feb10
lu., 24 de mar. de 2025 10:48:32: 
 list.c | 57 ++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 48 insertions(+), 9 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:72:21: error: implicit declaration of function 'create_Node' [-Werror=implicit-function-declaration]
     Node* newNode = create_Node(data);
                     ^~~~~~~~~~~
list.c:72:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
list.c: In function 'pushCurrent':
list.c:98:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
     Node* newNode = create_Node(data);
                     ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b8e1583
lu., 24 de mar. de 2025 10:49:34: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:72:21: error: implicit declaration of function 'create_Node' [-Werror=implicit-function-declaration]
     Node* newNode = create_Node(data);
                     ^~~~~~~~~~~
list.c:72:21: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
b9ecfb1
lu., 24 de mar. de 2025 10:51:54: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
da81c3a
lu., 24 de mar. de 2025 10:56:32: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8f64cbe
lu., 24 de mar. de 2025 11:01:25: 
 list.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|0
1589a72
lu., 24 de mar. de 2025 11:05:36: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
4842535
